Tried to fix the results shift but couldn't make it on Firefox. In Chrome it is displayed properly. Screenshot is included
git-svn-id: svn://danse.us/VNET/vnf/branches/beta-useluban/vnfb@1763 056da4b6-1853-4d91-9082-68a8d0adb2e4

--- a/html/css/vnf-qe.css
+++ b/html/css/vnf-qe.css
@@ -158,6 +158,18 @@ a.qe-run-task {
     width: 70px;
 }
 
+/*
+.qe-tasks-info td.qe-tasks-value {
+    width: 100px;
+}
+*/
+/*
+.qe-tasks-results p {
+    display: inline;
+    float: left;
+}
+*/
+
 .qe-cell-param {
     width: 170px;
     font-weight: bold;
